k8s/kustomize-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  labels:
    app: my-app
spec:
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: app
          image: my-app
          volumeMounts:
            - name: config
              mountPath: /config
            - name: password
              mountPath: /secrets
      volumes:
        # kustomize 로 생성된 confimap, secret 이름으로 참조해서 사용
        - name: config
          configMap:
            name: example-from-env-file
        - name: password
          secret:
            secretName: example-secret-literal
