k8s/syntax_error_ingress_networking.k8s.io_v1.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ysoftman-test-namespace
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ysoftman-test-ingress
  namespace: ysoftman-test-namespace
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # return 404; 세미콜론이 빠져 admission 에서 탐지되어 리소스로 등록되면 안된다.
    nginx.ingress.kubernetes.io/server-snippet: |
      location /teste {
        proxy_set_header Host $host;
      }
      location ~* {
        return 404
      }
spec:
  tls:
    - hosts:
        - ysoftman-test.com
      secretName: ysoftman-test-secret
  rules:
    - host: ysoftman-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ysoftamn-test-service
                port:
                  number: 80
