k8s/ingress_admission.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller-admission
  namespace: ingress-nginx
spec:
  ports:
  - name: admission
    port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    #nginx controller deployment 또는 daemonset 의 label 설정에 따라 알맞은 필드 사용
    #app: ingress-nginx
    #component: controller
    app.kubernetes.io/name: ingress-nginx
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: ingress-nginx-admission
  labels:
    app.kubernetes.io/name: ingress-nginx
webhooks:
- name: validate.nginx.ingress.kubernetes.io
  matchPolicy: Equivalent
  rules:
  - apiGroups:
    # k8s 1.16 이후 apiVersion: extensions/v1beta1 -> networking.k8s.io/v1beta1 등의 변경이 있다.
    # https://kubernetes.io/blog/2019/07/18/api-deprecations-in-1-16/
    #- networking.k8s.io
    - extensions
    apiVersions:
    - v1
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - ingresses
    scope: '*'
  failurePolicy: Fail
  admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      namespace: ingress-nginx
      name: ingress-nginx-controller-admission
      #path: /networking.k8s.io/v1beta1/ingresses
      path: /extensions/v1beta1/ingress
    caBundle: ${CA_BUNDLE}
  sideEffects: None
  timeoutSeconds: 10
